# rain-logger

server/: .editorconfig  .env  .gitignore  Cargo.toml  Rocket.toml
server/migrations/2020-05-24-230212_create_users/: up.sql
server/migrations/2020-05-24-231036_create_api_tokens/: down.sql  up.sql
server/migrations/2020-07-04-013703_create_precipitation_log_types/: down.sql  up.sql
server/migrations/2020-07-04-013709_create_precipitation_logs/: down.sql  up.sql
server/src/: main.rs  schema.rs
server/src/models/: api_token.rs  auth.rs  mod.rs  precipitation_log.rs  user.rs
server/src/routes/: auth.rs  log.rs  mod.rs  user.rs
server/src/utils/: jwt.rs
