[package]
name = "rain-logger-api"
version = "0.1.0"
authors = ["Adam N. Morris <adam@kernelpanicstudios.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
bcrypt = "0.8.1"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = { version = "0.4.12", features = ["serde"] }
uuid = { version = "0.6.0", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] } 

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
