[package]
name = "rain-logger-api"
version = "0.1.0"
authors = ["Adam N. Morris <adam@kernelpanicstudios.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
bcrypt = "0.9.0"
serde = "1.0.125 "
serde_derive = "1.0.125"
serde_json = "1.0.64"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "uuidv07", "chrono"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
